Fix broken links

--- a/stakeholderMap.html
+++ b/stakeholderMap.html
@@ -11,9 +11,9 @@
         <br>
         <hr>
 <nav>
-    <button><a href="/persona.html"></a>PERSONAS  </a></button>
-    <button><a href="/storyboard.html"></a>STORYBOARD </a></button>
-    <button><a href="/stakeholderMap.html"></a>STAKEHOLDER MAP </a></button>
+    <button><a href="persona.html">PERSONAS  </a></button>
+    <button><a href="storyboard.html">STORYBOARD </a></button>
+    <button><a href="stakeholderMap.html">STAKEHOLDER MAP </a></button>
 </nav>
 <hr>
 <br> <br>
