Create capstone home page to hold all final project information

--- a/persona.html
+++ b/persona.html
@@ -14,11 +14,13 @@
     <button><a href="persona.html">PERSONAS  </a></button>
     <button><a href="storyboard.html">STORYBOARD </a></button>
     <button><a href="stakeholderMap.html">STAKEHOLDER MAP </a></button>
+    <button><a href="index.html"> Jessie's Java </a> </button>
+
 </nav>
 <hr>
      <div class="personaContainer">
                 <div class="persona">
-                <img src="/img/Picture1.jpg">
+                <img src="img/Picture1.jpg">
   </div>
        <div class="personaText"> <p>
    <b>Grace(Systems Engineer, Developer, i++){</b> <br>
@@ -34,12 +36,12 @@
     Jessie's Java is big in the coding community so Grace will have the ability to sign up to host events in the community with the staff.
     <br>}
 </p>
-<small>[Persona based Grace Hopper (1906–1992) – Developed the first compiler and was instrumental in the creation of COBOL, an early programming language, coined the term “bug” in code.]</small>
+<small>//Persona based Grace Hopper (1906–1992) – Developed the first compiler and was instrumental in the creation of COBOL, an early programming language, coined the term “bug” in code.</small>
   </p>
 </div></div>
 <div class="personaContainer">
     <div class="persona">
-    <img src="/img/Picture2.jpg">
+    <img src="img/Picture2.jpg">
 </div>
 <div class="personaText"> <p>
 <b>Fei-Fei(The AI Researcher, Machine Learning, i++){</b> <br> <br>
@@ -54,13 +56,13 @@
     She will also have the ability to view the coffee menu and prices online before she arrives at the store to  choose her flavor for the day. 
     Reservations are created from the users appointed start time until the store closing time, hours available on the About Us page.
     <br>}</p>
-<small>[Persona based off Fei-Fei Li – AI researcher and former Chief Scientist of AI at Google Cloud, known for her work in deep learning and computer vision.]</small>
+<small>//Persona based off Fei-Fei Li – AI researcher and former Chief Scientist of AI at Google Cloud, known for her work in deep learning and computer vision. Actual image of Fei-Fei Li.</small>
 </p>
 </div></div>
 
 <div class="personaContainer">
     <div class="persona">
-    <img src="/img/Picture3.jpg">
+    <img src="img/Picture3.jpg">
 </div>
 <div class="personaText"> <p>
 <b>Gabriella(The College Student){</b> <br>
@@ -81,7 +83,7 @@
 
 <div class="personaContainer">
     <div class="persona">
-    <img src="/img/Picture4.jpg">
+    <img src="img/Picture4.jpg">
 </div>
 <div class="personaText"> <p>
 <b>Jon(The Weekend Coder, Hobbyist){</b> <br>
