--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Capstone: Storyboard</title>
+    <title>Capstone: </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,14 +15,19 @@
     <button><a href="storyboard.html">STORYBOARD </a></button>
     <button><a href="stakeholderMap.html">STAKEHOLDER MAP </a></button>
     <button><a href="index.html"> Jessie's Java </a> </button>
-
 </nav>
 <hr>
-<br>
-<img src="img/GraceSB.jpg">
-<img src="img/GabStoryboard.jpg">
-<img src="img/JonStoryboard.jpg">
+<br> <br>
 
+<br><br>
+Jessie's Java is not yet complete.
+<br><br><br>
+Website still under constuction.
+<br><br><br>
+Thank you, but for the time being here is my proposition and powerpoint presentation for my final projecy:
+<br><br><br>
+<a href="files/JJ_Proposition.pdf" target="_blank">PDF: Jessie's Java Proposition</a> <br> <br>
+<a href="files/400-412FinalPP.pdf" target="_blank">PDF: Jessie's Java Presentation</a> <br><br><br><br><br><br>
     </div>
 </body>
 </html>
