--- a/stakeholderMap.html
+++ b/stakeholderMap.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Capstone: Personas</title>
+    <title>Capstone: Stakeholder Map</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,11 +14,14 @@
     <button><a href="persona.html">PERSONAS  </a></button>
     <button><a href="storyboard.html">STORYBOARD </a></button>
     <button><a href="stakeholderMap.html">STAKEHOLDER MAP </a></button>
+    <button><a href="index.html"> Jessie's Java </a> </button>
+
 </nav>
 <hr>
 <br> <br>
 
-<img src="/img/MAP.png" width="900px">
+<img src="img/MAP.png" width="900px">
+<br>
     </div>
 </body>
 </html>
