--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Capstone: </title>
+    <title>Capstone: Jessica Battles </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,14 +17,12 @@
     <button><a href="index.html"> Jessie's Java </a> </button>
 </nav>
 <hr>
-<br> <br>
-
-<br><br>
-Jessie's Java is not yet complete.
-<br><br><br>
-Website still under constuction.
-<br><br><br>
-Thank you, but for the time being here is my proposition and powerpoint presentation for my final projecy:
+<img src="JJ_Files in PHP/Images/jj-hero.png" width="95%"> <br>
+ <a href="JJ_Files in PHP/index.php" target="_blank">
+    <img src="JJ_Files in PHP/Images/brewgle.avif" width="50"> <br>
+My Jessie's Java Website</a>
+<br>
+<small>XAMPP needs to be installed to view the php files of Jessie's Java</small>
 <br><br><br>
 <a href="files/JJ_Proposition.pdf" target="_blank">PDF: Jessie's Java Proposition</a> <br> <br>
 <a href="files/400-412FinalPP.pdf" target="_blank">PDF: Jessie's Java Presentation</a> <br><br><br><br><br><br>
