--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <div class="content">
         <br>
         <hr>
-<nav>
-    <button><a href="persona.html">PERSONAS  </a></button>
-    <button><a href="storyboard.html">STORYBOARD </a></button>
-    <button><a href="stakeholderMap.html">STAKEHOLDER MAP </a></button>
-    <button><a href="index.html"> Jessie's Java </a> </button>
-</nav>
+        <nav>
+            <button><a href="persona.html">PERSONA</a></button>
+            <button><a href="storyboard.html">STORYBOARD</a></button>
+            <button><a href="stakeholderMap.html">STAKEHOLDER MAP</a></button>
+            <button><a href="sitemap.html">SITE STRUCTURE</a></button>
+            <button><a href="index.html"> Jessie's Java </a> </button>
+        </nav>
 <hr>
 <img src="JJ_Files in PHP/Images/jj-hero.png" width="95%"> <br>
  <a href="JJ_Files in PHP/index.php" target="_blank">
@@ -24,8 +25,8 @@ My Jessie's Java Website</a>
 <br>
 <small>XAMPP needs to be installed to view the php files of Jessie's Java</small>
 <br><br><br>
-<a href="files/JJ_Proposition.pdf" target="_blank">PDF: Jessie's Java Proposition</a> <br> <br>
-<a href="files/400-412FinalPP.pdf" target="_blank">PDF: Jessie's Java Presentation</a> <br><br><br><br><br><br>
+<a href="files/JJ_Proposition.pdf" target="_blank">Jessie's Java Proposition</a> <br> <br>
+<a href="files/400-412FinalPP.pdf" target="_blank">Jessie's Java Presentation</a> <br><br><br><br><br><br>
     </div>
 </body>
 </html>
