--- a/persona.html
+++ b/persona.html
@@ -10,13 +10,13 @@
     <div class="content">
         <br>
         <hr>
-<nav>
-    <button><a href="persona.html">PERSONAS  </a></button>
-    <button><a href="storyboard.html">STORYBOARD </a></button>
-    <button><a href="stakeholderMap.html">STAKEHOLDER MAP </a></button>
-    <button><a href="index.html"> Jessie's Java </a> </button>
-
-</nav>
+        <nav>
+            <button><a href="persona.html">PERSONA</a></button>
+            <button><a href="storyboard.html">STORYBOARD</a></button>
+            <button><a href="stakeholderMap.html">STAKEHOLDER MAP</a></button>
+            <button><a href="sitemap.html">SITE STRUCTURE</a></button>
+            <button><a href="index.html"> Jessie's Java </a> </button>
+        </nav>
 <hr>
      <div class="personaContainer">
                 <div class="persona">
