Fix some info about php files on jessies java

--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
         </nav>
 <hr>
 <img src="JJ_Files in PHP/Images/jj-hero.png" width="90%"> <br>
- <a href="JJ_Files in PHP/index.php" target="_blank">
+ <a href="JJ_Files in PHP/.php" target="_blank">
     <img src="JJ_Files in PHP/Images/brewgle.avif" width="50"> <br>
 My Jessie's Java Website</a>
 <br>
-<small>XAMPP needs to be installed to view the php files of Jessie's Java</small>
+<small> Website is ran locally with XAMPP Control Panel with Apache and MySQL.  <br>
+    XAMPP needs to be installed to view the php files of Jessie's Java <br>
+    
+</small>
 <br><br><br>
 <a href="files/JJ_Proposition.pdf" target="_blank">Jessie's Java Proposition</a> <br> <br>
 <a href="files/400-412FinalPP.pdf" target="_blank">Jessie's Java Presentation</a> <br><br><br><br><br><br>
