--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         <br>
         <hr>
         <nav>
-            <button><a href="persona.html">PERSONA</a></button>
-            <button><a href="storyboard.html">STORYBOARD</a></button>
-            <button><a href="stakeholderMap.html">STAKEHOLDER MAP</a></button>
-            <button><a href="sitemap.html">SITE STRUCTURE</a></button>
+            <button><a href="persona.html">Persona</a></button>
+            <button><a href="storyboard.html">Storyboard</a></button>
+            <button><a href="stakeholderMap.html">Stakeholder Map</a></button>
+            <button><a href="sitemap.html">Site Structure</a></button>
+            <button><a href="tasklist.html">Task List</a></button>
             <button><a href="index.html"> Jessie's Java </a> </button>
         </nav>
 <hr>
