--- a/tasklist.html
+++ b/tasklist.html
@@ -21,9 +21,9 @@
 <hr>
 <br>
 <br>
-<div class="taskContainer">
+<div class="taskContainer"><h1>User Task List</h1>
+
     <div class="userTask">
-<h1>User Task List:</h1>
 <br>
 <h3>Browse Information:</h3><br>
 <ul>
