--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
 </head>
 <body>
     <div class="content">
-        <br>
-        <hr>
-        <nav>
-            <button><a href="persona.html">Persona</a></button>
-            <button><a href="storyboard.html">Storyboard</a></button>
-            <button><a href="stakeholderMap.html">Stakeholder Map</a></button>
-            <button><a href="sitemap.html">Site Structure</a></button>
-            <button><a href="tasklist.html">Task List</a></button>
-            <button><a href="index.html"> Jessie's Java </a> </button>
-        </nav>
-<hr>
+        <div id="nav"></div>
+
+        <script>
+          fetch("nav.html")
+            .then(response => response.text())
+            .then(data => {
+              document.getElementById("nav").innerHTML = data;
+            });
+        </script>
 <img src="JJ_Files in PHP/Images/jj-hero.png" width="90%"> <br>
  <a href="JJ_Files in PHP/.php" target="_blank">
     <img src="JJ_Files in PHP/Images/brewgle.avif" width="50"> <br>
