Add week 4 demo video

--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@ My Jessie's Java Website</a>
 <br>
 <small> Website is ran locally with XAMPP Control Panel with Apache and MySQL.  <br>
     XAMPP needs to be installed to view the php files of Jessie's Java <br>
-    
 </small>
-<br><br><br>
-<a href="files/JJ_Proposition.pdf" target="_blank">Jessie's Java Proposition</a> <br> <br>
-<a href="files/400-412FinalPP.pdf" target="_blank">Jessie's Java Presentation</a> <br><br><br><br><br><br>
+<br>
+<a href="files/JJ_Proposition.pdf" target="_blank">Jessie's Java Proposition</a> <br> 
+<a href="files/400-412FinalPP.pdf" target="_blank">Jessie's Java Presentation</a> <br>
+<br>
+<br>
+<br>
+
+<a href="https://www.veed.io/view/aab3fb82-d70b-4268-a8bf-01a97d199d0f?panel=share" target="_blank"><b><u>Click to view Week 4 demo on VEED</u></b>: <br> <img src="img/video2252962168-VEED.gif" alt="alt" width="50%"></a>
+
     </div>
 </body>
 </html>
