--- a/tasklist.html
+++ b/tasklist.html
@@ -41,6 +41,7 @@
     <li>Submit form</li>
     <li>View succsessful reservation information</li>
     <li>Receive confirmation via email</li>
+    <li>Ability to</li>
 </ul>
 </div>
 <div class="userTask">
