--- a/tasklist.html
+++ b/tasklist.html
@@ -24,7 +24,7 @@
 
     <div class="userTask">
 <br>
-<h3>User is able to Browse Information:</h3>
+<h3>User is able to: Browse Information:</h3>
 <ul>
     <li>View Event Calander</li>
     <li>Explore the coffee menu options</li>
@@ -33,7 +33,7 @@
 </ul>
 </div>
 <div class="userTask">
-<h3>User is able to Make A Reservation</h3>
+<h3>User is able to: Make A Reservation</h3>
 <ul>
     <li>Access the reservation form</li>
     <li>Fill in required information with alerts for out of bounds time</li>
@@ -41,11 +41,13 @@
     <li>Submit form</li>
     <li>View succsessful reservation information</li>
     <li>Receive confirmation via email</li>
-    <li>Ability to</li>
+    <li>Ability to search reservation information</li>
+    <li>Ability to edit reservation information</li>
+    <li>Ability to cancel reservation</li>
 </ul>
 </div>
 <div class="userTask">
-    <h3>User is able to Get Help</h3>
+    <h3>User is able to: Get Help</h3>
 <ul>
     <li>Interact with the chatbot in the corner of all pages</li>
     <li>Access contact form to e-mail the company</li>
