--- a/nav.html
+++ b/nav.html
@@ -3,9 +3,10 @@
 <nav>
     <button><a href="persona.html">Persona</a></button>
     <button><a href="storyboard.html">Storyboard</a></button>
-    <button><a href="stakeholderMap.html">Stakeholder Map</a></button>
-    <button><a href="sitemap.html">Site Structure</a></button>
+    <button><a href="stakeholderMap.html">Stakeholder</a></button>
+    <button><a href="sitemap.html">Structure</a></button>
     <button><a href="tasklist.html">Task List</a></button>
+    <button><a href="success.html">Success</a> </button>
     <button><a href="index.html"> Jessie's Java </a> </button>
 </nav>
 <hr>
