Fix nav on success

--- a/success.html
+++ b/success.html
@@ -13,7 +13,7 @@
             fetch("nav.html")
               .then(response => response.text())
               .then(data => {
-                document.getElstrongentById("nav").innerHTML = data;
+                document.getElementById("nav").innerHTML = data;
               });
           </script>
           
