Add database design

--- a/nav.html
+++ b/nav.html
@@ -7,6 +7,7 @@
     <button><a href="sitemap.html">Structure</a></button>
     <button><a href="tasklist.html">Task List</a></button>
     <button><a href="success.html">Success</a> </button>
+    <button><a href="database.html">Database</a></button>
     <button><a href="index.html"> Jessie's Java </a> </button>
 </nav>
 <hr>
